force-app/src/objects/TR1__BHLI_Prospect_Notes__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Contract__c</fullName>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__LinkedInCreatedAt__c</fullName>
        <label>LinkedIn Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__LinkedInLastModified__c</fullName>
        <label>LinkedIn Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__LinkedInNoteId__c</fullName>
        <label>LinkedIn Note Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Member__c</fullName>
        <label>Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Prospect Note</label>
    <listViews>
        <fullName>TR1__All_View</fullName>
        <columns>NAME</columns>
        <columns>TR1__Active__c</columns>
        <columns>TR1__Note__c</columns>
        <columns>TR1__Contract__c</columns>
        <columns>TR1__LinkedInNoteId__c</columns>
        <columns>TR1__Member__c</columns>
        <columns>TR1__LinkedInCreatedAt__c</columns>
        <columns>TR1__LinkedInLastModified__c</columns>
        <filterScope>Everything</filterScope>
        <label>All View</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Prospect Notes #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>